--- a/features.ipynb
+++ b/features.ipynb
@@ -2984,6 +2984,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding of target attribute"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -3005,6 +3012,13 @@
     "\n",
     "# Save the updated dataset to final_dataset.csv\n",
     "df.to_csv('final_dataset.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No of fake and Genuine"
    ]
   },
   {
@@ -3034,6 +3048,171 @@
     "print(\"Number of texts labeled as 'genuine':\", target_counts['genuine'])\n",
     "print(\"Number of texts labeled as 'fake':\", target_counts['fake'])\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sarcasam Detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average useful counts of all reviews: 0.8245604190048634\n",
+      "Number of reviews above threshold: 17714\n",
+      "Number of reviews below threshold: 35746\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the existing threshold_values.csv\n",
+    "threshold_df = pd.read_csv('final_dataset.csv')\n",
+    "\n",
+    "# Calculate the average of the 'useful' column\n",
+    "average_useful = threshold_df['funny'].mean()\n",
+    "\n",
+    "# Define the threshold\n",
+    "threshold = average_useful\n",
+    "\n",
+    "# Label the reviews based on the threshold\n",
+    "\n",
+    "threshold_df['funny_threshold'] = threshold_df['funny'].apply(lambda x: 1 if x > threshold else 0)\n",
+    "\n",
+    "# Save the modified DataFrame back to threshold_values.csv\n",
+    "threshold_df.to_csv('final_dataset.csv', index=False)\n",
+    "\n",
+    "# Count reviews above and below threshold\n",
+    "above_threshold_count = threshold_df[threshold_df['funny'] > threshold].shape[0]\n",
+    "below_threshold_count = threshold_df[threshold_df['funny'] <= threshold].shape[0]\n",
+    "\n",
+    "# Print the results\n",
+    "print(f'Average useful counts of all reviews: {average_useful}')\n",
+    "print(f'Number of reviews above threshold: {above_threshold_count}')\n",
+    "print(f'Number of reviews below threshold: {below_threshold_count}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average useful counts of all reviews: 3.8563973063973065\n",
+      "Number of reviews above threshold: 37313\n",
+      "Number of reviews below threshold: 16147\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the existing threshold_values.csv\n",
+    "threshold_df = pd.read_csv('final_dataset.csv')\n",
+    "\n",
+    "# Calculate the average of the 'useful' column\n",
+    "average_useful = threshold_df['stars'].mean()\n",
+    "\n",
+    "# Define the threshold\n",
+    "threshold = average_useful\n",
+    "\n",
+    "# Label the reviews based on the threshold\n",
+    "\n",
+    "threshold_df['star_threshold'] = threshold_df['stars'].apply(lambda x: 1 if x > threshold else 0)\n",
+    "\n",
+    "# Save the modified DataFrame back to threshold_values.csv\n",
+    "threshold_df.to_csv('final_dataset.csv', index=False)\n",
+    "\n",
+    "# Count reviews above and below threshold\n",
+    "above_threshold_count = threshold_df[threshold_df['stars'] > threshold].shape[0]\n",
+    "below_threshold_count = threshold_df[threshold_df['stars'] <= threshold].shape[0]\n",
+    "\n",
+    "# Print the results\n",
+    "print(f'Average useful counts of all reviews: {average_useful}')\n",
+    "print(f'Number of reviews above threshold: {above_threshold_count}')\n",
+    "print(f'Number of reviews below threshold: {below_threshold_count}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of reviews that meet the specified conditions: 2902\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('final_dataset.csv')\n",
+    "\n",
+    "# Filter the DataFrame based on the specified conditions\n",
+    "filtered_reviews = df[(df['funny_threshold'] == 1) & (df['star_threshold'] == 0) & (df['sentiment_score'] > 0) & (df['target'] == 'genuine')]\n",
+    "\n",
+    "# Count the number of reviews that satisfy the conditions\n",
+    "num_reviews = filtered_reviews.shape[0]\n",
+    "\n",
+    "# Update the 'target' label of the filtered reviews to 'fake'\n",
+    "df.loc[filtered_reviews.index, 'target'] = 'fake'\n",
+    "\n",
+    "# Save the updated dataset to final_dataset.csv\n",
+    "df.to_csv('final_dataset.csv', index=False)\n",
+    "\n",
+    "# Print the number of reviews\n",
+    "print(\"Number of reviews that meet the specified conditions:\", num_reviews)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of texts labeled as 'genuine': 41945\n",
+      "Number of texts labeled as 'fake': 11515\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('final_dataset.csv')\n",
+    "\n",
+    "# Count the number of texts with each target label\n",
+    "target_counts = df['target'].value_counts()\n",
+    "\n",
+    "# Display the counts\n",
+    "print(\"Number of texts labeled as 'genuine':\", target_counts['genuine'])\n",
+    "print(\"Number of texts labeled as 'fake':\", target_counts['fake'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
