--- a/features.ipynb
+++ b/features.ipynb
@@ -3209,6 +3209,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('final_dataset.csv')\n",
+    "\n",
+    "# Save the dataset to test.csv\n",
+    "df.to_csv('test.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
