--- a/ranking.ipynb
+++ b/ranking.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,11 +43,17 @@
        "      <th>useful</th>\n",
        "      <th>funny</th>\n",
        "      <th>sentiment_score</th>\n",
-       "      <th>rule1_threshold</th>\n",
+       "      <th>...</th>\n",
        "      <th>rule5_threshold</th>\n",
        "      <th>rule2_threshold</th>\n",
        "      <th>rule4_threshold</th>\n",
        "      <th>rule3_threshold</th>\n",
+       "      <th>similarity_score</th>\n",
+       "      <th>rule6_threshold</th>\n",
+       "      <th>count_ones</th>\n",
+       "      <th>target</th>\n",
+       "      <th>funny_threshold</th>\n",
+       "      <th>star_threshold</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -63,10 +69,16 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.405455</td>\n",
-       "      <td>1</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>genuine</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -81,9 +93,15 @@
        "      <td>30</td>\n",
        "      <td>7</td>\n",
        "      <td>0.598016</td>\n",
-       "      <td>1</td>\n",
+       "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>genuine</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -99,11 +117,17 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0.024826</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>fake</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -117,9 +141,15 @@
        "      <td>12</td>\n",
        "      <td>5</td>\n",
        "      <td>0.144998</td>\n",
+       "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>genuine</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -135,14 +165,21 @@
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0.140657</td>\n",
+       "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>genuine</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -160,42 +197,51 @@
        "3  3pCHQ8YHkuaZFFAEz7pz6A  We walked over to Tennessee Brew Works, one of...   \n",
        "4  FvTfqugdlzQSvFB1RAafNQ  Logan Circle, also known as Logan Square, is a...   \n",
        "\n",
-       "                  date  stars  useful  funny  sentiment_score  \\\n",
-       "0  2017-05-09 23:21:36      5       0      0         0.405455   \n",
-       "1  2009-05-01 02:00:03      5      30      7         0.598016   \n",
-       "2  2010-10-11 19:24:56      3       3      1         0.024826   \n",
-       "3  2018-10-23 14:24:32      4      12      5         0.144998   \n",
-       "4  2019-08-04 12:29:33      4       5      0         0.140657   \n",
+       "                  date  stars  useful  funny  sentiment_score  ...  \\\n",
+       "0  2017-05-09 23:21:36      5       0      0         0.405455  ...   \n",
+       "1  2009-05-01 02:00:03      5      30      7         0.598016  ...   \n",
+       "2  2010-10-11 19:24:56      3       3      1         0.024826  ...   \n",
+       "3  2018-10-23 14:24:32      4      12      5         0.144998  ...   \n",
+       "4  2019-08-04 12:29:33      4       5      0         0.140657  ...   \n",
        "\n",
-       "   rule1_threshold  rule5_threshold  rule2_threshold  rule4_threshold  \\\n",
-       "0                1                0                0                1   \n",
-       "1                1                1                0                1   \n",
-       "2                0                1                1                1   \n",
+       "   rule5_threshold  rule2_threshold  rule4_threshold  rule3_threshold  \\\n",
+       "0                0                0                1                1   \n",
+       "1                1                0                1                1   \n",
+       "2                1                1                1                1   \n",
        "3                1                1                1                1   \n",
        "4                1                1                1                1   \n",
        "\n",
-       "   rule3_threshold  \n",
-       "0                1  \n",
-       "1                1  \n",
-       "2                1  \n",
-       "3                1  \n",
-       "4                1  "
+       "   similarity_score  rule6_threshold  count_ones   target funny_threshold  \\\n",
+       "0               1.0                1           4  genuine               0   \n",
+       "1               1.0                1           5  genuine               1   \n",
+       "2               1.0                1           5     fake               1   \n",
+       "3               1.0                1           6  genuine               1   \n",
+       "4               1.0                1           6  genuine               0   \n",
+       "\n",
+       "   star_threshold  \n",
+       "0               1  \n",
+       "1               1  \n",
+       "2               0  \n",
+       "3               1  \n",
+       "4               1  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('threshold.csv')\n",
+    "df = pd.read_csv('final_dataset.csv')\n",
     "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -204,11 +250,50 @@
        "Index(['_id', 'user_id', 'review_count', 'review_id', 'text', 'date', 'stars',\n",
        "       'useful', 'funny', 'sentiment_score', 'rule1_threshold',\n",
        "       'rule5_threshold', 'rule2_threshold', 'rule4_threshold',\n",
-       "       'rule3_threshold'],\n",
+       "       'rule3_threshold', 'similarity_score', 'rule6_threshold', 'count_ones',\n",
+       "       'target', 'funny_threshold', 'star_threshold'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('final_dataset.csv')\n",
+    "\n",
+    "# Drop the remaining columns\n",
+    "columns_to_keep = ['user_id', 'review_id', 'text', 'date', 'stars', 'useful', 'funny', 'target']\n",
+    "df.drop(columns=df.columns.difference(columns_to_keep), inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['user_id', 'review_id', 'text', 'date', 'stars', 'useful', 'funny',\n",
+       "       'target'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
