--- a/ranking.ipynb
+++ b/ranking.ipynb
@@ -266,9 +266,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      user_id               review_id  \\\n",
+      "0      qVc8ODYU5SZjKXVBgXdI7w  Egy2a4qZeXGr2aY6KMxxbg   \n",
+      "1      qVc8ODYU5SZjKXVBgXdI7w  01vN0q6aMlFio6HAjLZz7Q   \n",
+      "2      j14WgRoU_-2ZE1aw1dXrJg  iMpqDa0Oyukiw5406KYNRw   \n",
+      "3      j14WgRoU_-2ZE1aw1dXrJg  3pCHQ8YHkuaZFFAEz7pz6A   \n",
+      "4      j14WgRoU_-2ZE1aw1dXrJg  FvTfqugdlzQSvFB1RAafNQ   \n",
+      "...                       ...                     ...   \n",
+      "53455  UKg3ybTCwNQJHFy-9vJJPQ  FpJMXcuWMXKg0Au9lEhfxw   \n",
+      "53456  1LS-1LbfUnLrftzcuDnalA  DJ79msGWItWK2ntfmVawuQ   \n",
+      "53457  yL4whR1Qb63FptG9IVRdVQ  5X1rxMbWQVGOQwNe0MWl8A   \n",
+      "53458  IWze1TqgVsA--cRLbU_nDQ  DYfFtk2BEuQk9qTv5eEfHw   \n",
+      "53459  PZBexV9rbHVNN31PwZ7w5g  uKvamuu3XMl32My29s_R4g   \n",
+      "\n",
+      "                                                    text                 date  \\\n",
+      "0      Remarkable food with beach access for the whol...  2017-05-09 23:21:36   \n",
+      "1      I loved everything about this lovely train sta...  2009-05-01 02:00:03   \n",
+      "2      The Praline Connection makes a mean po' boy.  ...  2010-10-11 19:24:56   \n",
+      "3      We walked over to Tennessee Brew Works, one of...  2018-10-23 14:24:32   \n",
+      "4      Logan Circle, also known as Logan Square, is a...  2019-08-04 12:29:33   \n",
+      "...                                                  ...                  ...   \n",
+      "53455  I thought this place was great!! We sat outsid...  2011-08-09 04:08:14   \n",
+      "53456  Really cute set up and the food is super fresh...  2017-12-22 14:08:40   \n",
+      "53457  This was my first time staying at a JW Marriot...  2017-03-29 22:56:35   \n",
+      "53458  Ended up here twice on our recent trip to Phil...  2012-02-20 02:41:53   \n",
+      "53459  If you are looking for greek food this is the ...  2017-03-10 18:41:09   \n",
+      "\n",
+      "       stars  useful  funny   target  \n",
+      "0          5       0      0  genuine  \n",
+      "1          5      30      7  genuine  \n",
+      "2          3       3      1     fake  \n",
+      "3          4      12      5  genuine  \n",
+      "4          4       5      0  genuine  \n",
+      "...      ...     ...    ...      ...  \n",
+      "53455      4       2      0  genuine  \n",
+      "53456      5       0      0  genuine  \n",
+      "53457      4       3      1  genuine  \n",
+      "53458      4       0      0  genuine  \n",
+      "53459      5       0      0  genuine  \n",
+      "\n",
+      "[53460 rows x 8 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -277,7 +324,10 @@
     "\n",
     "# Drop the remaining columns\n",
     "columns_to_keep = ['user_id', 'review_id', 'text', 'date', 'stars', 'useful', 'funny', 'target']\n",
-    "df.drop(columns=df.columns.difference(columns_to_keep), inplace=True)\n"
+    "df.drop(columns=df.columns.difference(columns_to_keep), inplace=True)\n",
+    "\n",
+    "# Show the DataFrame with the dropped columns\n",
+    "print(df)\n"
    ]
   },
   {
