--- a/ranking.ipynb
+++ b/ranking.ipynb
@@ -305,6 +305,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Naives Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7761878039655817\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        fake       1.00      0.00      0.00      2396\n",
+      "     genuine       0.78      1.00      0.87      8296\n",
+      "\n",
+      "    accuracy                           0.78     10692\n",
+      "   macro avg       0.89      0.50      0.44     10692\n",
+      "weighted avg       0.83      0.78      0.68     10692\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# Load the dataset\n",
+    "data = pd.read_csv('final_dataset.csv')\n",
+    "\n",
+    "# Drop rows with missing values\n",
+    "data.dropna(inplace=True)\n",
+    "\n",
+    "# Split data into features (text) and target\n",
+    "X = data['text']\n",
+    "y = data['target']\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Convert text data to TF-IDF representation\n",
+    "tfidf_vectorizer = TfidfVectorizer()\n",
+    "X_train_tfidf = tfidf_vectorizer.fit_transform(X_train)\n",
+    "X_test_tfidf = tfidf_vectorizer.transform(X_test)\n",
+    "\n",
+    "# Train the Naive Bayes classifier\n",
+    "nb_classifier = MultinomialNB()\n",
+    "nb_classifier.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "# Predict the target variable on the test set\n",
+    "y_pred = nb_classifier.predict(X_test_tfidf)\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "\n",
+    "# Calculate other metrics\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
