--- a/ranking.ipynb
+++ b/ranking.ipynb
@@ -452,6 +452,101 @@
     "# Calculate other metrics\n",
     "print(classification_report(y_test, y_pred))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Shiva\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\svm\\_classes.py:31: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Shiva\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\svm\\_base.py:1237: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8267396184062851\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        fake       0.66      0.42      0.51      4667\n",
+      "     genuine       0.85      0.94      0.89     16717\n",
+      "\n",
+      "    accuracy                           0.83     21384\n",
+      "   macro avg       0.76      0.68      0.70     21384\n",
+      "weighted avg       0.81      0.83      0.81     21384\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
+    "from sklearn.feature_extraction.text import HashingVectorizer\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
+    "# Custom transformer to select specific attributes\n",
+    "class AttributeSelector(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, attribute):\n",
+    "        self.attribute = attribute\n",
+    "\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        return X[self.attribute]\n",
+    "\n",
+    "# Load the dataset\n",
+    "data = pd.read_csv('final_dataset.csv')\n",
+    "\n",
+    "# Drop rows with missing values\n",
+    "data.dropna(inplace=True)\n",
+    "\n",
+    "# Split data into features and target\n",
+    "X = data[['text', 'useful', 'funny']]\n",
+    "y = data['target']\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=42)\n",
+    "\n",
+    "# Define the pipeline\n",
+    "pipeline = Pipeline([\n",
+    "    ('union', FeatureUnion(\n",
+    "        transformer_list=[\n",
+    "            ('text_pipeline', Pipeline([\n",
+    "                ('selector', AttributeSelector(attribute='text')),\n",
+    "                ('vectorizer', HashingVectorizer(n_features=2**18))\n",
+    "            ])),\n",
+    "            ('numeric_pipeline', Pipeline([\n",
+    "                ('selector', AttributeSelector(attribute=['useful', 'funny']))\n",
+    "            ]))\n",
+    "        ]\n",
+    "    )),\n",
+    "    ('classifier', LinearSVC())\n",
+    "])\n",
+    "\n",
+    "# Train the classifier\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict the target variable on the test set\n",
+    "y_pred = pipeline.predict(X_test)\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "\n",
+    "# Calculate other metrics\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
   }
  ],
  "metadata": {
