--- a/ranking.ipynb
+++ b/ranking.ipynb
@@ -375,6 +375,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7818930041152263\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        fake       1.00      0.00      0.00      4667\n",
+      "     genuine       0.78      1.00      0.88     16717\n",
+      "\n",
+      "    accuracy                           0.78     21384\n",
+      "   macro avg       0.89      0.50      0.44     21384\n",
+      "weighted avg       0.83      0.78      0.69     21384\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
+    "# Custom transformer to select specific attributes\n",
+    "class AttributeSelector(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, attribute):\n",
+    "        self.attribute = attribute\n",
+    "\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        return X[self.attribute]\n",
+    "\n",
+    "# Load the dataset\n",
+    "data = pd.read_csv('final_dataset.csv')\n",
+    "\n",
+    "# Drop rows with missing values\n",
+    "data.dropna(inplace=True)\n",
+    "\n",
+    "# Split data into features and target\n",
+    "X = data[['text', 'useful', 'funny']]\n",
+    "y = data['target']\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=42)\n",
+    "\n",
+    "# Define the pipeline\n",
+    "pipeline = Pipeline([\n",
+    "    ('union', FeatureUnion(\n",
+    "        transformer_list=[\n",
+    "            ('text_pipeline', Pipeline([\n",
+    "                ('selector', AttributeSelector(attribute='text')),\n",
+    "                ('vectorizer', TfidfVectorizer())\n",
+    "            ])),\n",
+    "            ('numeric_pipeline', Pipeline([\n",
+    "                ('selector', AttributeSelector(attribute=['useful', 'funny']))\n",
+    "            ]))\n",
+    "        ]\n",
+    "    )),\n",
+    "    ('classifier', MultinomialNB())\n",
+    "])\n",
+    "\n",
+    "# Train the classifier\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict the target variable on the test set\n",
+    "y_pred = pipeline.predict(X_test)\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "\n",
+    "# Calculate other metrics\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
