--- a/ranking.ipynb
+++ b/ranking.ipynb
@@ -374,6 +374,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Multi Class label Training(Naives Bayes)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -459,12 +466,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "SVM"
+    "SVM Single label training"
    ]
   },
   {
@@ -536,6 +541,13 @@
     "\n",
     "# Calculate other metrics\n",
     "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVM Multi label Training"
    ]
   },
   {
