--- a/ranking.ipynb
+++ b/ranking.ipynb
@@ -644,6 +644,123 @@
     "# Calculate other metrics\n",
     "print(classification_report(y_test, y_pred))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CNN SINGLE CLASS\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Shiva\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\keras\\src\\layers\\core\\embedding.py:86: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m122s\u001b[0m 133ms/step - accuracy: 0.9918 - loss: 0.0454 - val_accuracy: 1.0000 - val_loss: 1.3637e-06\n",
+      "Epoch 2/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m114s\u001b[0m 126ms/step - accuracy: 1.0000 - loss: 8.8025e-07 - val_accuracy: 1.0000 - val_loss: 3.1007e-07\n",
+      "Epoch 3/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m112s\u001b[0m 124ms/step - accuracy: 1.0000 - loss: 2.2173e-07 - val_accuracy: 1.0000 - val_loss: 1.2307e-07\n",
+      "Epoch 4/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m111s\u001b[0m 123ms/step - accuracy: 1.0000 - loss: 7.7338e-08 - val_accuracy: 1.0000 - val_loss: 5.8558e-08\n",
+      "Epoch 5/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m105s\u001b[0m 116ms/step - accuracy: 1.0000 - loss: 4.9412e-08 - val_accuracy: 1.0000 - val_loss: 3.1262e-08\n",
+      "Epoch 6/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m111s\u001b[0m 123ms/step - accuracy: 1.0000 - loss: 2.6192e-08 - val_accuracy: 1.0000 - val_loss: 1.7782e-08\n",
+      "Epoch 7/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m113s\u001b[0m 125ms/step - accuracy: 1.0000 - loss: 1.3342e-08 - val_accuracy: 1.0000 - val_loss: 1.0473e-08\n",
+      "Epoch 8/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m100s\u001b[0m 111ms/step - accuracy: 1.0000 - loss: 7.5246e-09 - val_accuracy: 1.0000 - val_loss: 6.3717e-09\n",
+      "Epoch 9/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m106s\u001b[0m 118ms/step - accuracy: 1.0000 - loss: 4.5564e-09 - val_accuracy: 1.0000 - val_loss: 3.9870e-09\n",
+      "Epoch 10/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m111s\u001b[0m 123ms/step - accuracy: 1.0000 - loss: 3.1640e-09 - val_accuracy: 1.0000 - val_loss: 2.5893e-09\n",
+      "\u001b[1m669/669\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step\n",
+      "Accuracy: 1.0\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     21384\n",
+      "\n",
+      "    accuracy                           1.00     21384\n",
+      "   macro avg       1.00      1.00      1.00     21384\n",
+      "weighted avg       1.00      1.00      1.00     21384\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Embedding, Conv1D, GlobalMaxPooling1D, Dense\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# Load the dataset\n",
+    "data = pd.read_csv('final_dataset.csv')\n",
+    "\n",
+    "# Drop rows with missing values\n",
+    "data.dropna(inplace=True)\n",
+    "\n",
+    "# Split data into features (text) and target\n",
+    "X = data['text']\n",
+    "y = data['target']\n",
+    "\n",
+    "# Convert string labels to binary labels\n",
+    "y_binary = (y == 'positive').astype(int)\n",
+    "\n",
+    "# Tokenize the text data\n",
+    "tokenizer = Tokenizer()\n",
+    "tokenizer.fit_on_texts(X)\n",
+    "X_seq = tokenizer.texts_to_sequences(X)\n",
+    "\n",
+    "# Pad sequences to ensure uniform length\n",
+    "max_sequence_length = 100  # adjust this based on your data\n",
+    "X_padded = pad_sequences(X_seq, maxlen=max_sequence_length, padding='post', truncating='post')\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_padded, y_binary, test_size=0.4, random_state=42)\n",
+    "\n",
+    "# Define the CNN model\n",
+    "embedding_dim = 100  # adjust this based on your data\n",
+    "vocab_size = len(tokenizer.word_index) + 1  # add 1 for padding token\n",
+    "model = Sequential([\n",
+    "    Embedding(input_dim=vocab_size, output_dim=embedding_dim, input_length=max_sequence_length),\n",
+    "    Conv1D(filters=128, kernel_size=5, activation='relu'),\n",
+    "    GlobalMaxPooling1D(),\n",
+    "    Dense(units=64, activation='relu'),\n",
+    "    Dense(units=1, activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=32, validation_split=0.1)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "y_pred = (model.predict(X_test) > 0.5).astype(int)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "\n",
+    "# Calculate other metrics\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
   }
  ],
  "metadata": {
