--- a/ranking.ipynb
+++ b/ranking.ipynb
@@ -370,7 +370,8 @@
     "print(\"Accuracy:\", accuracy)\n",
     "\n",
     "# Calculate other metrics\n",
-    "print(classification_report(y_test, y_pred))\n"
+    "print(classification_report(y_test, y_pred))\n",
+    "\n"
    ]
   },
   {
