--- a/ranking.ipynb
+++ b/ranking.ipynb
@@ -5095,7 +5095,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
